unsharp masking, gaussian blur done

--- a/Code/Makefile
+++ b/Code/Makefile
@@ -1,4 +1,7 @@
 kabsmake: kabsDImaxtree2.c
 	gcc -O3 -I../Dist kabsDImaxtree2.c -o kabs -lfreeimage
-gaussmake: guassianblur.c
-	gcc -O3 -I../Dist gaussianblur.c -o gauss -lfreeimage
+gaussmake: gaussianblur.c
+	gcc -O3 -I../Dist gaussianblur.c -o gauss -lfreeimage -lm
+unsharpmake: unsharpmasking.c
+	gcc -O3 -I../Dist unsharpmasking.c -o usm -lfreeimage
+all: kabsmake gaussmake unsharpmake
