--- a/Code/Makefile
+++ b/Code/Makefile
@@ -1,5 +1,5 @@
 kabsmake: kabsDImaxtree2.c
-	gcc -O3 -I../Dist kabsDImaxtree2.c -o kabs -lfreeimage
+	gcc -O3 -I../Dist kabsDImaxtree2.c -o kabs -lfreeimage -lm
 gaussmake: gaussianblur.c
 	gcc -O3 -I../Dist gaussianblur.c -o gauss -lfreeimage -lm
 unsharpmake: unsharpmasking.c
