everything done, readme added

--- a/Code/Makefile
+++ b/Code/Makefile
@@ -1,9 +1,8 @@
+default: all
 kabsmake: kabsDImaxtree2.c
-	gcc -O3 -I../Dist kabsDImaxtree2.c -o kabs -lfreeimage -lm
-highpassmake: gaussianblur.c
+	gcc -O3 -I../Dist kabsDImaxtree2.c -o kabs -lfreeimage 
+highpassmake: highPass.c
 	gcc -O3 -I../Dist highPass.c -o highPass -lfreeimage -lm
-unsharpmake: unsharpmasking.c
-	gcc -O3 -I../Dist unsharpmasking.c -o usm -lfreeimage
-peakmake: kabsDImaxtree2Peak.c
-	gcc -O3 -I ../Dist kabsDImaxtree2Peak.c -o kabsPeak -lfreeimage -lm
-all: kabsmake highpassmake unsharpmake peakmake
+unsharpmake: unsharpMasking.c
+	gcc -O3 -I../Dist unsharpMasking.c -o usm -lfreeimage
+all: kabsmake highpassmake unsharpmake
